--- a/src/Components/Grid/Grid.css
+++ b/src/Components/Grid/Grid.css
@@ -1,3 +1,11 @@
+.grid-wrapper{
+    display: flex;
+    flex-direction: column;
+}
+h1{
+    display:block;
+    color: white;
+}
 .grid{
     height: 500px;
     width: 500px;
@@ -5,4 +13,13 @@
     flex-wrap: wrap;
     justify-content:space-between;
     align-items:center;
+}
+.reset{
+    background-color: red;
+    font-size: 25px;
+    padding: 20px 10px ;
+    width:200px;
+    font-weight: 500;
+    outline: none;
+    border: none;
 }
