--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -4,8 +4,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width:100px;
-    height:100px;
+    width:120px;
+    height:120px;
     border-radius: 10%;
     background-color:yellow;
+    font-size: 45px;
 }
